# begira

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  setup.py
docs/: architecture.md  refactor-map.md
examples/: README.md  hello_begira.py  viz_gaussians.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/app/: AppShell.tsx  useHistory.ts  usePanels.ts  useViewRegistry.ts  viewerRuntimeState.ts
frontend/src/viewer/: AnimateToolbar.tsx  CameraScene.tsx  CameraTrajectoryScene.tsx  DebugOverlay.tsx  DockWorkspace.tsx  Hierarchy.tsx  (+23 more)
scripts/: sync_frontend_dist.py
src/begira/: __init__.py  __main__.py  animation.py  api.py  api_time.py  client.py  conventions.py  element_projection.py  elements.py  elements_api.py  handles.py  image_logging.py  ply.py  registry.py  runner.py  server.py  timeline.py  viewer_settings.py  web.py
tests/: test_camera_animation_api.py  test_camera_animation_handles.py  test_camera_animation_registry.py  test_camera_api_intrinsics.py  test_default_colors.py  test_element_handles.py  test_elements_api_pointcloud.py  test_gaussians_api.py  test_image_api.py  test_import_compat.py  test_log_camera.py  test_log_image.py  test_log_points_pointcloud_object.py  test_packaged_frontend_http.py  test_packaged_frontend_resources.py  test_ply_gaussians_loader.py  test_ply_loader.py  test_run_auto_attach.py  test_timeline_api.py  test_timeline_handles.py  test_timeline_registry.py
tests/assets/: triangle_ascii_color.ply
(+65 files in other folders)
