[project]
name = "begira"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
readme = "README.md"
authors = [ { name = "" } ]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "numpy>=1.26",
    "plyfile>=1.1",
    "httpx>=0.27",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
begira = "begira.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"begira._frontend" = ["dist/**"]
